cluster/manifests/atlas-operator/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlas-operator
  labels:
    name: atlas-operator
    pod-security.kubernetes.io/enforce: restricted
