cluster/manifests/atlas-operator/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: atlas-operator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: atlas-operator
      app.kubernetes.io/component: controller-manager
  mtls:
    mode: STRICT
